Fix whitespace issues in the file/diff viewer (bugs 675016, 1197155).

--- a/static/css/zamboni/files.css
+++ b/static/css/zamboni/files.css
@@ -598,6 +598,10 @@ div.diff-bar {
     margin: .5em 0;
 }
 
+#tab-stops {
+    max-width: 3em;
+}
+
 #toggle-known-container {
     margin-top: .3em;
 }
